--- a/src/main/resources/application-wjq.yml
+++ b/src/main/resources/application-wjq.yml
@@ -44,10 +44,10 @@ server:
   servlet.context-path: /community
   tomcat:
     uri-encoding: utf-8
-#  ssl:
-#    key-store: classpath:3791279_nuandao.zhouxy.xyz.pfx
-#    key-store-password: q7lI293r
-#    key-store-type: PKCS12
+  ssl:
+    key-store: classpath:3791279_nuandao.zhouxy.xyz.pfx
+    key-store-password: q7lI293r
+    key-store-type: PKCS12
 logging:
   level:
     com.support.mapper: debug
